--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.26.2",
+        "react-select": "^5.8.3",
         "uuid": "^11.0.3"
     },
     "devDependencies": {
