--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
         "@nivo/bar": "^0.88.0",
         "@nivo/bump": "^0.87.0",
         "@nivo/line": "^0.88.0",
+        "@types/react-katex": "^3.0.4",
         "d3-time-format": "^4.1.0",
         "date-fns": "^4.1.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-katex": "^3.0.1",
         "react-router-dom": "^6.26.2",
         "react-select": "^5.8.3",
         "uuid": "^11.0.3"
