--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-katex": "^3.0.1",
+        "react-responsive": "^10.0.0",
         "react-router-dom": "^6.26.2",
         "react-select": "^5.8.3",
         "uuid": "^11.0.3"
