--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "date-fns": "^4.1.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-infinite-scroll-component": "^6.1.0",
         "react-katex": "^3.0.1",
         "react-responsive": "^10.0.0",
         "react-router-dom": "^6.26.2",
