--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
         "@nivo/bar": "^0.88.0",
         "@nivo/bump": "^0.87.0",
         "@nivo/line": "^0.88.0",
+        "@types/pica": "^9.0.5",
         "@types/react-katex": "^3.0.4",
         "d3-time-format": "^4.1.0",
         "date-fns": "^4.1.0",
+        "pica": "^9.0.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-infinite-scroll-component": "^6.1.0",
