--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "pica": "^9.0.1",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
+        "react-icons": "^5.5.0",
         "react-infinite-scroll-component": "^6.1.0",
         "react-katex": "^3.1.0",
         "react-responsive": "^10.0.1",
@@ -49,18 +50,18 @@
         "ic-mops": "^1.8.0",
         "jsdom": "^26.1.0",
         "mo-dev": "^0.13.0",
+        "node-sass": "^9.0.0",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.5.4",
         "postcss-cli": "^11.0.1",
         "prettier": "^3.5.3",
         "prettier-plugin-motoko": "^0.11.0",
+        "sass": "^1.79.4",
         "seedrandom": "^3.0.5",
         "tailwindcss": "^3.4.13",
         "typescript": "^5.8.3",
         "vite": "^6.3.5",
         "vite-plugin-environment": "^1.1.3",
-        "vitest": "^3.2.2",
-        "node-sass": "^9.0.0",
-        "sass": "^1.79.4"
+        "vitest": "^3.2.2"
     }
 }
