--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "autoprefixer": "^10.4.21",
         "cross-fetch": "^4.1.0",
         "dotenv": "^16.5.0",
+        "fake-indexeddb": "^6.0.1",
         "ic-mops": "^1.8.0",
         "jsdom": "^26.1.0",
         "mo-dev": "^0.13.0",
@@ -63,5 +64,9 @@
         "vite": "^6.3.5",
         "vite-plugin-environment": "^1.1.3",
         "vitest": "^3.2.2"
+    },
+    "overrides": {
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0"
     }
 }
