--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
         "typescript": "^5.8.3",
         "vite": "^6.3.5",
         "vite-plugin-environment": "^1.1.3",
-        "vitest": "^3.2.2"
+        "vitest": "^3.2.2",
+        "boring-avatars": "^1.11.2"
     },
     "overrides": {
         "react": "^19.1.0",
