--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@nivo/line": "^0.89.0",
         "@types/pica": "^9.0.5",
         "@types/react-katex": "^3.0.4",
+        "boring-avatars": "^1.11.2",
         "d3-time-format": "^4.1.0",
         "date-fns": "^4.1.0",
         "pica": "^9.0.1",
@@ -63,8 +64,7 @@
         "typescript": "^5.8.3",
         "vite": "^6.3.5",
         "vite-plugin-environment": "^1.1.3",
-        "vitest": "^3.2.2",
-        "boring-avatars": "^1.11.2"
+        "vitest": "^3.2.2"
     },
     "overrides": {
         "react": "^19.1.0",
