--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-responsive": "^10.0.1",
         "react-router-dom": "^7.6.2",
         "react-select": "^5.10.1",
+        "sonner": "^2.0.6",
         "uuid": "^11.1.0"
     },
     "devDependencies": {
