--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
         "postinstall": "mops install"
     },
     "dependencies": {
-        "@ic-reactor/react": "1.16.0",
+        "@dfinity/agent": "^2.4.1",
+        "@dfinity/candid": "^2.4.1",
+        "@dfinity/principal": "^2.4.1",
+        "@dfinity/utils": "^2.13.2",
+        "@nfid/identitykit": "^1.0.14",
         "@nivo/bar": "^0.89.0",
         "@nivo/bump": "^0.89.0",
         "@nivo/line": "^0.89.0",
@@ -35,11 +39,7 @@
         "uuid": "^11.1.0"
     },
     "devDependencies": {
-        "@dfinity/agent": "^2.4.1",
-        "@dfinity/candid": "^2.4.1",
-        "@dfinity/identity": "^2.4.1",
-        "@dfinity/principal": "^2.4.1",
-        "@dfinity/utils": "^2.13.0",
+        "@dfinity/auth-client": "^2.4.1",
         "@tailwindcss/typography": "^0.5.15",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
@@ -70,6 +70,11 @@
     },
     "overrides": {
         "react": "^19.1.0",
-        "react-dom": "^19.1.0"
+        "react-dom": "^19.1.0",
+        "@dfinity/agent": "^2.4.1",
+        "@dfinity/auth-client": "^2.4.1",
+        "@dfinity/principal": "^2.4.1",
+        "@dfinity/candid": "^2.4.1",
+        "@dfinity/utils": "^2.13.2"
     }
 }
