--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "d3-time-format": "^4.1.0",
         "date-fns": "^4.1.0",
         "pica": "^9.0.1",
+        "qrcode": "^1.5.4",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-icons": "^5.5.0",
@@ -46,6 +47,7 @@
         "@types/node": "^22.15.30",
         "@types/react": "^19.1.6",
         "@types/react-dom": "^19.1.6",
+        "@types/qrcode": "^1.5.5",
         "@vitejs/plugin-react": "^4.5.1",
         "autoprefixer": "^10.4.21",
         "cross-fetch": "^4.1.0",
