--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-router-dom": "^7.6.2",
         "react-select": "^5.10.1",
         "sonner": "^2.0.6",
+        "tailwindcss-animate": "^1.0.7",
         "uuid": "^11.1.0"
     },
     "devDependencies": {
@@ -45,9 +46,9 @@
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
         "@types/node": "^22.15.30",
+        "@types/qrcode": "^1.5.5",
         "@types/react": "^19.1.6",
         "@types/react-dom": "^19.1.6",
-        "@types/qrcode": "^1.5.5",
         "@vitejs/plugin-react": "^4.5.1",
         "autoprefixer": "^10.4.21",
         "cross-fetch": "^4.1.0",
