Add Incentives.compute_amount, misc minor changes in preparation of limit orders

--- a/sns/sns.yaml
+++ b/sns/sns.yaml
@@ -1,10 +1,8 @@
 name: Towerview
 
 description: >
-    Towerview combines prediction markets and DeFi lending into 
-    the first Real-Time Consensus Engine. Its innovative proof-of-foresight 
-    mechanism incentivizes participants to act genuinely by validating opinions 
-    that withstand time.
+    Towerview is a decentralized epistemic ledger — a protocol
+    designed to align incentives toward truthful consensus.
     Towerview is offered for participation only by persons legally
     allowed to participate in token sales in their jurisdiction.
     By participating, you declare that you are eligible under local laws.
